SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

The Logs window now remembers its size.

#470 New global preference to auto-save current SQL commands into file at exit and auto-reload them at startup into SQL editor pane.
  See menu File --> Global Preferences --> Tab SQL --> Check box --> Section General


Dataimport Plugin:
 - Improved messaging
 - Table refresh after import
 Thanks to Krzysztof Szymko for the patch.


Bookmarks Plugin: It's now possible to define default values for parameters.
   Here is an extract from updated the SQLBookmark-Plugin help:
     In case you want to give a default value for a parameter the syntax would be ${prompt[, tip](defaultValue)}.<BR>
     Also a list of predefined values is possible. The syntax then is ${prompt[, tip](defaultValue_1|defaultValue_2|defaultValue_3)}
   Thanks to Krzysztof Szymko for the patch.

Comment/uncomment short cuts (ctrl minus / ctrl shift minus) now work with Numpad-minus too.

Added "Create Data Script from SQL", "Store result of SQL in table", "Create Data Script from SQL" functions to editor's right mouse menu.

#491 Tab length can be configured and tabs can be chosen to be replace by spaces.
        See menu File --> New Session Properties --> Tab Syntax

#548 Size of table cell popup can be configured to be saved,
     see menu File --> Global Preferences --> tab General --> last check box in section Appearance

#548 Add button "as XML" to the modal window "Value of column ..." opened from Results table
     AND integrated Json formatting

More Granular RSYNTAX Color Tokens
 Thanks to Duane Redfern for the merge request

Tabs can be closed by middle mouse click

Added default driver definition for Salesforces DB
