@@ -23,9 +23,11 @@ SessionObjectTreePropertiesPanel.filterNote=Object tree display filters for Cata
 
 SessionObjectTreePropertiesPanel.catalogInclude=Catalog include
 SessionObjectTreePropertiesPanel.schemaInclude=Schema include
+SessionObjectTreePropertiesPanel.tableTypeInclude=Table Types include
 SessionObjectTreePropertiesPanel.objectInclude=Objects include
 SessionObjectTreePropertiesPanel.catalogExclude=Catalog exclude
 SessionObjectTreePropertiesPanel.schemaExclude=Schema exclude
+SessionObjectTreePropertiesPanel.tableTypeExclude=Table Types exclude
 SessionObjectTreePropertiesPanel.objectExclude=Objects exclude
 
 #
