@@ -122,12 +122,16 @@ public class SessionPropertiesBeanInfo extends SimpleBeanInfo
 							"getCatalogFilterInclude", "setCatalogFilterInclude"),
 						new PropertyDescriptor(IPropNames.SCHEMA_FILTER_INCLUDE, SessionProperties.class,
 							"getSchemaFilterInclude", "setSchemaFilterInclude"),
+						new PropertyDescriptor(IPropNames.TABLE_TYPE_FILTER_INCLUDE, SessionProperties.class,
+							"getTableTypeFilterInclude", "setTableTypeFilterInclude"),
 						new PropertyDescriptor(IPropNames.OBJECT_FILTER_INCLUDE, SessionProperties.class,
 							"getObjectFilterInclude", "setObjectFilterInclude"),
 						new PropertyDescriptor(IPropNames.CATALOG_FILTER_EXCLUDE, SessionProperties.class,
 							"getCatalogFilterExclude", "setCatalogFilterExclude"),
 						new PropertyDescriptor(IPropNames.SCHEMA_FILTER_EXCLUDE, SessionProperties.class,
 							"getSchemaFilterExclude", "setSchemaFilterExclude"),
+						new PropertyDescriptor(IPropNames.TABLE_TYPE_FILTER_EXCLUDE, SessionProperties.class,
+							"getTableTypeFilterExclude", "setTableTypeFilterExclude"),
 						new PropertyDescriptor(IPropNames.OBJECT_FILTER_EXCLUDE, SessionProperties.class,
 							"getObjectFilterExclude", "setObjectFilterExclude"),
 
