@@ -63,7 +63,9 @@ dataTypeUnknown.unknownTypes=Unknown DataTypes   (non-standard SQL type codes)
 
 floatingPointBase.typeBigDecimal=FLOAT, REAL, DOUBLE, NUMERIC, DECIMAL (SQL types 6, 7, 8, 2, 3)
 floatingPointBase.useDefaultFormat=Use default format ({0})
-floatingPointBase.uselocaleDependendFormat=Use locale-dependent format ({0}) with the maximum number of decimal digits of
+floatingPointBase.uselocaleDependendFormat=Use locale-dependent format ({0}), ({1}) with:
+floatingPointBase.uselocaleDependendFormat.minDecimalDigits=a) minimum number of decimal digits of
+floatingPointBase.uselocaleDependendFormat.maxDecimalDigits=b) maximum number of decimal digits of
 dataTypeBlob.useColumnLabelInsteadColumnName=Use column labels instead of column names in result headers
 
 dataTypeGeneral.generalType=General (applies to all types)
